@@ -2,6 +2,10 @@ Src\Changes.txt
 Add new items to top.
 (This summarizes all changes to all files under Src, including Src\Languages.)
 
+2006-04-22 Kimmo
+ PATCH: [ 1473635 ] Move some results update code to DirDoc
+  Src: DirActions.cpp DirDoc.cpp DirDoc.h
+
 2006-04-20 Kimmo
  TODO: [ 1469363 ] Need image for aborted status in folder compare
   Icon from Tim
